asm_tests/other_testfiles/invalid_files/error43.s
.name "MORO"
.comment "MORJESTA!"

xor r1, r2, %12
